--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONG_URL=mongodb+srv://keshana004:Test123@cluster0.xvho4kz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONG_URL=mongodb+srv://keshana004:Admin123@cluster0.uigfkqe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
